# pygt3x

./: .gitignore  Makefile  README.md  azure-pipelines.yml  pyproject.toml
.github/workflows/: python-publish.yml  tests.yml
gt3x/: AccelerationSample.py  Activity1Payload.py  Activity2Payload.py  Activity3Payload.py  BitPackAcceleration.py  CalibrationV2Service.py  Gt3xCalibratedReader.py  Gt3xEventTypes.py  Gt3xFileReader.py  Gt3xHeader.py  Gt3xInfo.py  Gt3xLogReader.py  Gt3xRawEvent.py  __init__.py  activity_payload.py  bit_pack_acceleration.py  calibrated_reader.py  callibration_v2_service.py  reader.py
gt3x/tests/: test_CalibrationV2Service.py
gt3x/tests/sample_files/: WRIST_rawLSB_032Hz.csv  WRIST_rawLSB_032Hz_test.agdc
pygt3x/: __init__.py  activity_payload.py  bit_pack_acceleration.py  calibrated_reader.py  calibration.py  callibration_v2_service.py  componenets.py  components.py  events.py  reader.py
tests/: conftest.py  test_CalibrationV2Service.py  test_calibration.py  test_formats.py  test_ism.py
tests/resources/: ISM_Disabled.gt3x  WRIST_rawLSB_032Hz_test.agdc  neo.gt3x  small.gt3x
tests/resources/temperature/: CPW1C48210013_baseline.agdc
tests/resources/temperature/Csv_ADC/: CPW1C48210013_baseline_temperature_ADXL_ADC.csv  CPW1C48210013_baseline_temperature_MCU_ADC.csv
tests/resources/temperature/Csv_Calibrated/: CPW1C48210013_baseline_temperature_ADXL_calibrated.csv
tests/testresources/: ISM_Enabled.gt3x  WRIST_rawCalibrated_032Hz.csv  WRIST_rawLSB_032Hz_test.agdc  neo.csv
tests/testresources/temperature/Csv_Calibrated/: CPW1C48210013_baseline_temperature_MCU_calibrated.csv
