[tool.poetry]
name = "pygt3x"
version = "0.6.1"
description = "Python module for reading GT3X/AGDC file format data"
authors = ["Mark Fogle <mark.fogle@theactigraph.com>"]
maintainers = ["Ali Neishabouri <ali.neishabouri@theactigraph.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/actigraph/pygt3x"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = ">=1.2.5"
numpy = ">=1.21.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = ">= 1.5.1"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
pydocstyle = "^6.1.1"
types-setuptools = "^65.7.0.3"
flake8-logging = "^1.6.0"

[[tool.mypy.overrides]]
module = ["pandas"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
