[tool.poetry]
name = "pygt3x"
version = "0.7.0"
description = "Python module for reading GT3X/AGDC file format data"
authors = ["Mark Fogle <mark.fogle@theactigraph.com>"]
maintainers = ["Ali Neishabouri <ali.neishabouri@theactigraph.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/actigraph/pygt3x"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = ">=1.2.5"
numpy = ">=1.21.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = ">= 1.5.1"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
pydocstyle = "^6.1.1"
types-setuptools = "^65.7.0.3"
flake8-logging = "^1.6.0"
sphinx-gallery = "^0.18.0"
numpydoc = "^1.8.0"
autoapi = "^2.0.1"
sphinx-autoapi = "^3.3.2"
sphinx-mermaid = "^0.0.8"
sphinxcontrib-mermaid = "^1.0.0"
sphinxcontrib-bibtex = "^2.6.3"

[[tool.mypy.overrides]]
module = ["pandas"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
