[project]
name = "pygt3x"
dynamic = ["version"]
description = "Python module for reading GT3X/AGDC file format data"
authors = [{ name = "Mark Fogle", email = "mark.fogle@theactigraph.com" }]
requires-python = ">3.9,<=3.13"
readme = "README.md"
license = "GPL-3.0-or-later"
maintainers = [{ name = "Ali Neishabouri", email = "ali.neishabouri@theactigraph.com" }]
dependencies = [
    "pandas>=1.2.5",
    "numpy>=1.21.2",
]
testpaths = [
    "tests",
]

[project.urls]
Repository = "https://github.com/actigraph/pygt3x"

[dependency-groups]
dev = [
    "pytest>=7.4.2,<8",
    "mypy>= 1.5.1",
    "flake8>=6.0.0,<7",
    "pytest-cov>=4.1.0,<5",
    "pydocstyle>=6.1.1,<7",
    "types-setuptools>=65.7.0.3,<66",
    "flake8-logging>=1.6.0,<2",
    "sphinx-gallery>=0.18.0,<0.19",
    "numpydoc>=1.8.0,<2",
    "autoapi>=2.0.1,<3",
    "sphinx-autoapi>=3.3.2,<4",
    "sphinx-mermaid>=0.0.8,<0.0.9",
    "sphinxcontrib-mermaid>=1.0.0,<2",
    "sphinxcontrib-bibtex>=2.6.3,<3",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = ["pandas"]
ignore_missing_imports = true

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests/resources"
]